Updates for Java25 and Gradle9